equipment change interface wip

--- a/src/main/resources/static/css/security/sec__equipment-change.css
+++ b/src/main/resources/static/css/security/sec__equipment-change.css
@@ -1,1 +1,62 @@
 @import "../common.css";
+
+.equipment-item {
+    background-size: cover;
+    display: inline-block;
+    width: 240px;
+    height: 240px;
+    border: 2px solid black;
+    border-radius: 30px;
+    text-align: center;
+    padding: 12px;
+    word-break: break-word;
+    margin: 20px;
+    float: left;
+}
+
+.equipment-item_assault {
+    background-image: linear-gradient(to bottom, rgba(246, 246, 246, 0.94), rgba(246, 246, 246, 0.94)), url("../images/assault.png");
+}
+
+.equipment-item_pistol {
+    background-image: linear-gradient(to bottom, rgba(246, 246, 246, 0.94), rgba(246, 246, 246, 0.94)), url("../images/pistol.svg");
+}
+
+.equipment-item_melee {
+    background-image: linear-gradient(to bottom, rgba(246, 246, 246, 0.94), rgba(246, 246, 246, 0.94)), url("../images/melee.png");
+}
+
+.equipment-item_smg {
+    background-image: linear-gradient(to bottom, rgba(246, 246, 246, 0.94), rgba(246, 246, 246, 0.94)), url("../images/smg.png");
+}
+
+.equipment-item_lmg {
+    background-image: linear-gradient(to bottom, rgba(246, 246, 246, 0.94), rgba(246, 246, 246, 0.94)), url("../images/minigun.png");
+}
+
+.equipment-item_sniper {
+    background-image: linear-gradient(to bottom, rgba(246, 246, 246, 0.94), rgba(246, 246, 246, 0.94)), url("../images/sniper.png");
+}
+
+.equipment-item_alien {
+    background-image: linear-gradient(to bottom, rgba(246, 246, 246, 0.94), rgba(246, 246, 246, 0.94)), url("../images/alien.png");
+}
+
+.equipment-item_land {
+    background-image: linear-gradient(to bottom, rgba(246, 246, 246, 0.94), rgba(246, 246, 246, 0.94)), url("../images/land.png");
+}
+
+.equipment-item_air {
+    background-image: linear-gradient(to bottom, rgba(246, 246, 246, 0.94), rgba(246, 246, 246, 0.94)), url("../images/air.png");
+}
+
+table {
+    margin: auto;
+    border-collapse: collapse;
+}
+
+td {
+    padding: 4px 10px;
+    word-break: break-word;
+    border: 1px solid black;
+}
