--- a/src/main/resources/templates/security/sec__equipment-change.html
+++ b/src/main/resources/templates/security/sec__equipment-change.html
@@ -13,6 +13,92 @@
         <img alt="back" th:src="@{/images/back.png}" class="button button_back button_round">
     </a>
 </div>
+<div th:if="${status}" th:text="${status}" class="flash flash_success"></div>
+<div th:if="${error}" th:text="${error}" class="flash flash_error"></div>
 
+<div class="flex-row-center">
+    <div th:if="${current_security.weapon != null}" class="equipment-item approved"
+         th:classappend="|${current_security.weapon.type.name()=='MELEE' ? 'equipment-item_melee' : current_security.weapon.type.name()=='PISTOL' ? 'equipment-item_pistol' :
+              current_security.weapon.type.name()=='SUBMACHINE_GUN' ? 'equipment-item_smg' : current_security.weapon.type.name()=='ASSAULT_RIFLE' ? 'equipment-item_assault' :
+              current_security.weapon.type.name()=='LIGHT_MACHINE_GUN' ? 'equipment-item_lmg' : current_security.weapon.type.name()=='SNIPER_RIFLE' ? 'equipment-item_sniper' :
+              current_security.weapon.type.name()=='ALIEN' ? 'equipment-item_alien' : ''}|">
+        <div class="flex-column-no-center">
+            <div class="font-big" th:text="${current_security.weapon.name}"></div>
+            <div class="form-item" th:text="${current_security.weapon.description}"></div>
+            <div class="form-item" th:text="${'Access level: ' + current_security.weapon.description}"></div>
+        </div>
+    </div>
+    <div th:if="${current_security.transport     != null}" class="equipment-item approved"
+         th:classappend="|${current_security.transport.type.name()=='LAND' ? 'equipment-item_land' :
+              current_security.transport.type.name()=='AIR' ? 'equipment-item_air' : ''}|">
+        <div class="flex-column-no-center">
+            <div class="font-big" th:text="${current_security.weapon.name}"></div>
+            <div class="form-item" th:text="${current_security.weapon.description}"></div>
+            <div class="form-item" th:text="${'Access level: ' + current_security.weapon.description}"></div>
+        </div>
+    </div>
+</div>
+
+<div class="flex-row-center" th:if="${current_request.employee != null}">
+    <div class="equipment-item pending"
+         th:classappend="|${current_request.weapon.type.name()=='MELEE' ? 'equipment-item_melee' : current_request.weapon.type.name()=='PISTOL' ? 'equipment-item_pistol' :
+              current_request.weapon.type.name()=='SUBMACHINE_GUN' ? 'equipment-item_smg' : current_request.weapon.type.name()=='ASSAULT_RIFLE' ? 'equipment-item_assault' :
+              current_request.weapon.type.name()=='LIGHT_MACHINE_GUN' ? 'equipment-item_lmg' : current_request.weapon.type.name()=='SNIPER_RIFLE' ? 'equipment-item_sniper' :
+              current_request.weapon.type.name()=='ALIEN' ? 'equipment-item_alien' : ''}|">
+        <div class="flex-column-no-center">
+            <div class="font-big" th:text="${current_request.weapon.name}"></div>
+            <div class="form-item" th:text="${current_request.weapon.description}"></div>
+            <div class="form-item" th:text="${'Access level: ' + current_request.weapon.description}"></div>
+        </div>
+    </div>
+    <div class="equipment-item pending"
+         th:classappend="|${current_request.transport.type.name()=='LAND' ? 'equipment-item_land' :
+              current_request.transport.type.name()=='AIR' ? 'equipment-item_air' : ''}|">
+        <div class="flex-column-no-center">
+            <div class="font-big" th:text="${current_request.weapon.name}"></div>
+            <div class="form-item" th:text="${current_request.weapon.description}"></div>
+            <div class="form-item" th:text="${'Access level: ' + current_request.weapon.description}"></div>
+        </div>
+    </div>
+</div>
+
+<form th:if="${current_request.employee != null}" class="flex-row-center" method="post" action="#"
+      th:action="@{/sec/withdrawChange}">
+    <input type="submit" class="button rejected" value="Withdraw request">
+</form>
+
+<table>
+    <thead>
+    <tr>
+        <td> Id</td>
+        <td> Type</td>
+        <td> Name</td>
+        <td> Description</td>
+        <td> Access lvl</td>
+    </tr>
+    </thead>
+    <tbody>
+    <tr class="weapon-rows" th:each="weapon : ${available_weapons}">
+        <td th:text="${weapon.id}"></td>
+        <td th:text="|${weapon.type.name()=='MELEE' ? 'Melee' : weapon.type.name()=='PISTOL' ? 'Pistol' :
+              weapon.type.name()=='SUBMACHINE_GUN' ? 'Submachine gun' : weapon.type.name()=='ASSAULT_RIFLE' ? 'Assault rifle' :
+              weapon.type.name()=='LIGHT_MACHINE_GUN' ? 'Light machine gun' : weapon.type.name()=='SNIPER_RIFLE' ? 'Sniper rifle' :
+              weapon.type.name()=='ALIEN' ? 'Alien' : ''}|"></td>
+        <td th:text="${weapon.name}"></td>
+        <td th:text="${weapon.description}"></td>
+        <td th:text="${weapon.requiredAccessLvl}"></td>
+    </tr>
+    <tr class="transport-rows" th:each="transport : ${available_transport}">
+        <td th:text="${transport.id}"></td>
+        <td th:text="|${weapon.type.name()=='MELEE' ? 'Melee' : transport.type.name()=='PISTOL' ? 'Pistol' :
+              transport.type.name()=='SUBMACHINE_GUN' ? 'Submachine gun' : transport.type.name()=='ASSAULT_RIFLE' ? 'Assault rifle' :
+              transport.type.name()=='LIGHT_MACHINE_GUN' ? 'Light machine gun' : transport.type.name()=='SNIPER_RIFLE' ? 'Sniper rifle' :
+              transport.type.name()=='ALIEN' ? 'Alien' : ''}|"></td>
+        <td th:text="${transport.name}"></td>
+        <td th:text="${transport.description}"></td>
+        <td th:text="${transport.requiredAccessLvl}"></td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
