--- a/src/main/resources/static/css/equipment-switch.css
+++ b/src/main/resources/static/css/equipment-switch.css
@@ -1,5 +1,5 @@
 .onoffswitch {
-    margin: 10px auto;
+    margin: 30px auto 10px auto;
     position: relative; width: 111px;
     -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
 }
