--- a/src/main/resources/static/css/shop.css
+++ b/src/main/resources/static/css/shop.css
@@ -69,7 +69,7 @@ body {
     background-size: cover;
     display: inline-block;
     width: 240px;
-    height: 240px;
+    min-height: 240px;
     border: 2px solid black;
     border-radius: 30px;
     text-align: center;
