--- a/src/main/resources/static/css/managers/manager__equipment-change.css
+++ b/src/main/resources/static/css/managers/manager__equipment-change.css
@@ -1,1 +1,78 @@
 @import "../common.css";
+
+body {
+    margin: 0;
+}
+
+.content {
+    text-align: center;
+    margin-top: 106px;
+}
+
+.content__item {
+    word-break: break-word;
+    width: 650px;
+    margin: 20px auto auto auto;
+    border: 2px solid black;
+}
+
+.weapon-flex {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.weapon-description {
+    width: 500px;
+}
+
+.button-flex-row {
+    display: flex;
+    justify-content: center;
+}
+
+.button-flex-row * {
+    margin: 0 15px;
+}
+
+
+.content__main {
+    padding: 12px;
+}
+
+h1 {
+    margin: 0;
+    width: 100%;
+    text-align: center;
+}
+
+.content__header {
+    text-align: center;
+    padding: 12px 12px 10px;
+    border-bottom: 2px solid;
+}
+
+@media (max-width: 750px) {
+    .content__item {
+        width: 90vw;
+    }
+
+    .weapon-description {
+        width: 70vw;
+    }
+}
+
+@media (max-width: 450px) {
+    .weapon-flex {
+        flex-direction: column;
+    }
+
+    .button-flex-row {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .button-flex-row * {
+        margin-bottom: 7px;
+    }
+}
