--- a/src/main/resources/templates/managers/manager__main.html
+++ b/src/main/resources/templates/managers/manager__main.html
@@ -29,7 +29,7 @@
             New weapons
             <div class="notification-number" th:if="${new_weap_count > 0}" th:text="${new_weap_count}"></div>
         </a>
-        <a class="flex-column grid-button button">
+        <a th:href="@{/man/newEquipment}" class="flex-column grid-button button">
             Equipment change
             <div class="notification-number" th:if="${eq_change_count > 0}" th:text="${eq_change_count}"></div>
         </a>
